Properly connect backend to Vercel with proxy and port alignment